--- a/ICONEXT/Views/Home/Index.cshtml
+++ b/ICONEXT/Views/Home/Index.cshtml
@@ -1,9 +1,17 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    <link rel="stylesheet" href="~/css/login.css">
 }
 
 <div class="text-center">
-
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+            <h5 class="card-title">Project ABC</h5>
+            <a href="ViewProject" class="btn btn-primary">Edit</a><br><br>
+            <h class="text">Start: 12/08/2020</h>
+        </div>
+    </div>
+    <button type="button" class="btn btn-success">Create New Project</button>
 
 
 
